add_executable(fork fork)
add_executable(vfork vfork)
add_executable(exit_status exit_status exit)
add_executable(waitpid waitpid)
add_executable(race race)
add_executable(avoid_race avoid_race)
add_executable(exec exec)
add_executable(echo_env echo_env)
add_executable(exec_intr exec_intr)
add_executable(system system)
add_executable(systest systest)
add_executable(pruids pruids)
add_executable(acct_data acct_data)
add_executable(print_sel_acct print_sel_acct)
add_executable(getlogin getlogin)
# add_executable(nice nice)
add_executable(pr_times pr_times)
add_executable(ex8.1 ex8.1)
add_executable(ex8.2 ex8.2)
add_executable(ex8.3 ex8.3)
add_executable(ex8.6 ex8.6)
