add_executable(10fig02 10fig02)
add_executable(10fig05 10fig05)
add_executable(10fig06 10fig06)

add_executable(10fig09 10fig09)
add_library(sleep STATIC 10fig07 10fig08)
target_link_libraries(10fig09 sleep)

add_executable(10fig10 10fig10)
add_executable(10fig11 10fig11)
add_executable(10fig15 10fig15)
add_executable(10fig20 10fig20 10fig14)
add_executable(10fig22 10fig22)
add_executable(10fig23 10fig23)
add_executable(10fig26 10fig26 10fig28)
add_executable(10fig31 10fig31)

add_executable(ex10.6 ex10.6)
add_executable(ex10.9 ex10.9)
add_executable(ex10.10 ex10.10)

add_executable(ex10.11 10fig19 ex10.11)
add_executable(ex10.12 ex10.12)
